trunk/Archive2/2b/ff5f2a37dc97e4/output
main.cpp:5:9: error: member 'a' declared as a template
    int a;
        ^
1 error generated.
