trunk/Archive2/2b/ff5f2a37dc97e4/main.cpp
template <class U>
struct A
{
    template <class T, const T& t>
    int a;
};

int main(){}
